feat: add endpoint search
